# mlab

./: README.md
llm-app/: .envrc.template  .flake8  .gitignore  README.md  dredd.yml  pyproject.toml
llm-app/src/llm_app/: __main__.py  cli.py  db.py  llm.py  llm_app.py  search.py
llm-app/src/llm_app/api/: main.py  test_main.py
llm-app/tests/dredd/: hooks_predict.py  openapi-predict.json
llm-scene-understanding/: .gitignore  Makefile  README.md  cli.spec  pyproject.toml  sceneformer.spec
llm-scene-understanding/src/scene_understanding/: __init__.py  base_loader.py  cli.py  config.py  duckdb_loader.py  loader_factory.py  ontology_generator.py  parquet_loader.py  sqlite_loader.py  types.py
llm-scene-understanding/src/scene_understanding/utils/: __init__.py  logging.py
llm-scene-understanding/tests/: __init__.py  compare_databases.py  conftest.py  create_test_db.py  test_cli_sampling.py  test_duckdb.py  test_duckdb_loader.py  test_ontology.py  test_sampling_and_sqlite.py  test_sampling_logic.py  test_sampling_only.py  test_strategies.py
llm-scene-understanding/tests/unit/: __init__.py  test_config.py  test_logging.py
