[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "llm_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openai = "^0.27.8"
llama-index = "^0.6.32"
sparqlwrapper = "^2.0.0"
langchain = "^0.0.214"
tiktoken = "^0.4.0"
qdrant-client = "^1.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"
poetry = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
