[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "llm_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.12"
openai = "^0.27.8"
sparqlwrapper = "^2.0.0"
tiktoken = "^0.4.0"
qdrant-client = "^1.3.0"
python-dotenv = "^1.0.0"
ja-ginza = "^5.1.2"
ja-ginza-electra = "^5.1.2"
sentence-transformers = "^2.2.2"
llama-index = "0.5.27"
# freeze version to keep SQLAlchemy v1 with langchain less than v0.0.148. https://github.com/hwchase17/langchain/pull/3310 
langchain = "0.0.142"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyterlab = "^4.0.2"
ipywidgets = "^8.0.6"
poetry = "^1.5.1"
icecream = "^2.1.3"
devtools = {extras = ["pygments"], version = "^0.11.0"}
litecli = "^1.9.0"
httpx = {extras = ["cli"], version = "^0.24.1"}

[tool.poetry.group.app.dependencies]
fastapi = "^0.98.0"
streamlit = "^1.24.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
