[project]
name = "scene-understanding"
version = "0.1.0"
description = "SceneFormer CLI - AI-powered scene understanding tool"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "rdflib>=7.0.0",
    "duckdb>=1.3.1",
    "orjson>=3.10.18",
]

[project.scripts]
sceneformer-cli = "scene_understanding.cli:main"

[build-system]
requires = [
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "pyinstaller>=6.14.2",
    "pytest>=8.4.1",
]

